Added uncommented version for running Robocode in script files for Java versions older than major version 12.